Fix text truncation on small sizes

--- a/strava_generator/static/strava_generator/css/index.css
+++ b/strava_generator/static/strava_generator/css/index.css
@@ -1,3 +1,11 @@
+section {
+    min-width: 0;
+}
+
+
+/* -------------------------------------------------------------------------------------------------------------------*/
+
+
 #map {
     width: auto;
     height: 100%;
